# legitifier

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: seed_entry.md
.github/workflows/: ci.yml  release.yml  security.yml  validate_seed.yml
cli/: main.py
data/: search_presets.yaml  seed.jsonl  seed_schema.md
docs/: PRIVACY.md  RELEASE_PROCESS.md  THREAT_MODEL.md  scan_report.schema.json
heuristics/code/: api_disguised_as_local.yaml  documentation_quality.yaml  hardcoded_secrets.yaml  requirements_chaos.yaml  test_coverage_signals.yaml
heuristics/content/: readme_llm_analysis.yaml  telegram_funnel.yaml
heuristics/metadata/: account_age.yaml  commit_burst.yaml  no_activity.yaml  owner_reputation.yaml
heuristics/repo_history/: abandoned_takeover.yaml
heuristics/social/: ai_prs.yaml  contributor_reputation.yaml  fork_ratio.yaml  low_activity_stargazers.yaml  stars_velocity.yaml  (+1 more)
legitifier_pkg/: __init__.py  cache.py  pipeline.py  search.py  search_presets.yaml
prompts/: readme_analysis.txt
scripts/: bump_version.py  calibrate.py  export_schema.py  sync_data.py  validate_seed.py
tests/: test_auto_propagation.py  test_cache.py  test_core.py  test_data_sync.py  test_feedback_and_llm.py  test_fetcher_github.py  test_fixtures.py  test_graphql.py  test_integration.py  test_privacy.py  test_rate_limit.py  test_reputation.py  test_schema_stability.py  test_security.py  test_seed_validator.py  test_whitelist_granularity.py
(+25 files in other folders)
