[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legitifier"
version = "0.1.0"
description = "Evaluate the credibility of GitHub repositories"
authors = [{name = "p3bri4n", url = "https://github.com/p3bri4n"}]
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.15",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.25"]
collect = []
dev = ["pytest>=8.0", "pytest-mock>=3.0", "pytest-cov>=5.0"]

[project.scripts]
legitifier = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["legitifier_pkg", "cli", "heuristics", "prompts", "data"]

[tool.hatch.build.targets.wheel.shared-data]
"legitifier_pkg/data/seed.jsonl" = "legitifier_pkg/data/seed.jsonl"
